adjust charts min-height to prevent scroll jumping

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -362,17 +362,20 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
   .tests-chart, .infections-chart, .metrics-comparison-chart
     min-height: 640px
 
-  .cases-chart, .ratios-chart, .regions-chart
+  .cases-chart, .ratios-chart
     min-height: 450px
 
   .age-groups-chart
-    min-height: 579px    
+    min-height: 608px    
 
   .countries-active-chart, .countries-cases-chart, .countries-deaths-chart
     min-height: 703px
   
   .sources-chart
     min-height: 610px
+
+  .regions-chart, .regions-chart-100k
+    min-height: 694px
 
   .tests-chart, .ratios-chart
     .metric-selector
